# AllWhisper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
readme/: README.en.md  README.ja.md  README.zh-CN.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: export.rs  mod.rs  models.rs  transcribe.rs  translate.rs
src/lib/: types.ts
src/lib/components/: SettingsModal.svelte  Sidebar.svelte  TranscriptItem.svelte  TranscriptPanel.svelte  VideoPlayer.svelte
src/lib/i18n/: en.ts  index.ts  ja.ts  ko.ts  vi.ts  zh-CN.ts  zh-TW.ts
src/lib/stores/: app.ts
src/lib/utils/: chinese-convert.ts
